--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "react-drag-resize-dialog",
   "version": "1.0.11",
   "description": "基于 react-rnd 的一个可以移动可以改变大小的对话框组件",
-  "main": "es/index.js",
+  "main": "lib/index.js",
   "files": [
     "es",
     "lib"
   ],
   "scripts": {
-    "build": "father build",
-    "start": "webpack-dev-server --mode development --open"
+    "build": "webpack --config config/webpack.prod.config.js",
+    "start": "webpack serve --inline --progress --config config/webpack.dev.config.js --open",
+    "pub":"npm run build && npm publish"
   },
   "keywords": [
     "react",
@@ -17,10 +18,6 @@
     "npm",
     "umi"
   ],
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.8.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -30,13 +27,21 @@
     "babel-loader": "8.0.5",
     "css-loader": "^3.4.2",
     "father": "^2.29.3",
+    "html-webpack-plugin": "^5.3.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "react-rnd": "^10.1.9",
     "style-loader": "^1.1.3",
     "umi": "^3.1.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^5.36.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "author": "lius",
   "license": "ISC"
