--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,8 @@
 # 发布 npm 的时候需要忽略的文件和文件夹
 # npm 默认不会把 node_modules 发上去
 src
-example
+config
+dist
+examples
 .babelrc
 .editorconfig
-webpack.config.js
