--- a/package.json
+++ b/package.json
@@ -26,23 +26,22 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "8.0.5",
     "css-loader": "^3.4.2",
-    "father": "^2.29.3",
     "html-webpack-plugin": "^5.3.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^1.5.0",
+    "react-drag-resize-dialog": "^1.0.13",
     "react-rnd": "^10.1.9",
     "style-loader": "^1.1.3",
     "umi": "^3.1.2",
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
+    "webpack-merge": "^5.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
+  "dependencies": {},
   "author": "lius",
   "license": "ISC"
 }
